GallerySlider: Fixed arrows flickering when changing options

--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -53,9 +53,12 @@
         }
 
         .prev,
+        .next {
+            display: flex;
+        }
+        .prev,
         .next,
         .slick-arrow {
-            display: flex;
             align-items: center;
             justify-content: center;
             .left(@bz-gallery-arrow__left);
